tests/suite/analyze/snapshots/suite__analyze__constant_propagation__propagate_mul.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 61
expression: copy_propagation
---

       propagate_mul

+--------------------------+
|          enter:          |
| {}                       |
| mov _a, 5                |
| {_a: 5}                  |
| mov rax, 5               |
| {rax: 5, _a: 5}          |
| imul _a                  |
| {rax: 25, rdx: 0, _a: 5} |
| jmp exit                 |
| {rax: 25, rdx: 0, _a: 5} |
+--------------------------+
  |
  |
  v
+--------------------------+
|          exit:           |
| {rax: 25, rdx: 0, _a: 5} |
| ret                      |
| {rax: 25, rdx: 0, _a: 5} |
+--------------------------+

